--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit==1.34.0
 pandas==2.2.2
+numpy==1.26.4      # or simply drop the pin → installs 2.0+ automatically
 requests==2.31.0
+openpyxl==3.1.0
 matplotlib==3.8.4
 seaborn==0.13.2
-openpyxl==3.1.2
-numpy==1.23.5
+
