--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+# requirements.txt  (root level)
 streamlit==1.34.0
-pandas==2.2.2
-numpy==1.26.4      # or simply drop the pin → installs 2.0+ automatically
+pandas==2.2.2          # brings the right NumPy automatically
 requests==2.31.0
 openpyxl==3.1.0
 matplotlib==3.8.4
 seaborn==0.13.2
+
 
