Downgrade pandas for Python 3.13 wheels

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 # requirements.txt  (root level)
 streamlit==1.34.0
-pandas==2.2.2          # brings the right NumPy automatically
+pandas==1.5.3
 requests==2.31.0
 openpyxl==3.1.0
 matplotlib==3.8.4
 seaborn==0.13.2
-
 
